# sagemcom-f3896-py

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  nodemon.json  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: codeql.yml  dev.yaml  docker-security.yml  publish.yml  python.yaml  release-please.yml  release.yaml  scorecard.yml  snyk.yml
docs/superpowers/plans/: 2026-04-02-additional-metrics.md
docs/superpowers/specs/: 2026-04-02-additional-metrics-design.md
sagemcom_f3896_client/: cli.py  client.py  exporter.py  models.py  profile_messages.py  templates.py  util.py
tests/: conftest.py  test_client.py  test_client_session.py  test_models.py
