[project]
name = "sagemcom-f3896-client"
version = "0.6.2"
description = "Sagemcom F3896 exporter"
authors = [{ name = "Ties de Kock", email = "ties@tiesdekock.nl" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7,<9",
    "aiohttp>=3.9.4,<4",
    "prometheus-async[aiohttp]>=22.2.0,<23",
]

[project.scripts]
f3896-cli = "sagemcom_f3896_client.cli:cli"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1,<4",
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.6.1,<4",
    "ruff>=0.3.7,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]

[tool.pytest.ini_options]
junit_family = "xunit2"
